# Dental-AI-Receptionist

./: .env.example  .gitignore  README.md  build-test-local.sh  connection.md  dentist_schedule_6_months.xlsx  docker-compose.yml  launch-vapi.sh  migrate_schedule.py  run-vapi-local.sh  seed-schedule-local.sh  seed_schedule.py  setup-local-databases.sh  stop-vapi-go.sh  tailscale-expose-vapi.sh  vapi-healthcheck.sh  vapi-update.json
agent-stub/: agent.js  package.json
app/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
backend/: Cargo.toml  Dockerfile  init.sql  mongo-init.js  package.json  phonebook.json  server.js
backend-realtime/: agent_factory.py  main_agent.py  mcp_bridge.py  run_agent.py  warmup.py  weather_mcp.py
backend-vapi/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  start.sh  tsconfig.json
backend/.cargo/: config.toml
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs  mongo_db.rs  postgres_db.rs
backend/src/models/: mod.rs
backend/src/services/: email.rs
db/: init.sql
docs/: ai-tool-use-guide.md  init.sql
engineering-notebook/: 00-index.md  01-system-architecture.md  02-android-app-design.md  03-audio-pipeline.md  04-websocket-protocol.md  05-backend-server-design.md  06-agent-stub-design.md  07-api-compatibility.md  08-security-design.md  09-build-deployment.md  10-testing-strategy.md  11-error-handling.md  12-future-roadmap.md  run-evaluation.sh  (+4 more)
(+167 files in other folders)
