[package]
name = "dental-ai-browser-backend"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder", "smtp-transport"] }
chrono = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
mongodb = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
